# voicenotes-android

./: .gitignore  README.md  gradlew  settings.gradle  setup.sh  sync-icons.sh
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni.c
app/src/main/java/nl/gbraad/transcribe/: AudioConverter.java  FileListAdapter.java  LiveRecorder.java  MainActivity.java  TranscribeActivity.java  WhisperCallback.java  WhisperLib.java
app/src/main/res/layout/: activity_main.xml  activity_transcribe.xml  item_file.xml  spinner_dropdown_item.xml
app/src/main/res/menu/: transcribe_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
